# temporary

./: README.md  meson.build
data/: com.github.donadigo.crazy-project.gresource.xml  meson.build
data/icons/: tools.gresource.xml
data/styles/: application.css
gegl-fixes/: gegl-fixes.c  gegl-fixes.h  gegl-fixes.vapi
src/: Application.vala  AsyncJob.vala  BlendingShader.vala  CanvasView.vala  Colorspace.vala  Document.vala  EffectBackend.vala  FileReader.vala  GlobalWindow.vala  HeaderMenuButton.vala  ImageLayer.vala  Layer.vala  LayerActor.vala  LayerStack.vala  LayerTransform.vala  MainView.vala  MainWindow.vala  NewDocumentDialog.vala  NotebookView.vala  ReactiveActor.vala  RenderPipeline.vala  WorkspaceTab.vala  WorkspaceView.vala
src/Canvas/: CanvasUtils.vala  CanvasView.vala  LayerActor.vala  TransformActor.vala  TransformHandleActor.vala  TransformTriggerActor.vala
src/Core/: Action.vala  AsyncGraph.vala  AsyncJob.vala  BlendingShader.vala  Colorspace.vala  ContextStore.vala  Document.vala  DocumentGraph.vala  EffectBackend.vala  EventBus.vala  EventBusUtils.vala  Events.vala  FileReader.vala  Formats.vala  GlobalKeyState.vala  Image.vala  ImageGraph.vala  ImageMask.vala  LayerTransformService.vala  PngFileReader.vala  RenderPipeline.vala  Service.vala  ToolCollection.vala  ToolItem.vala  ToolItemGroup.vala  TransformAction.vala  Types.vala  Utils.vala
src/Core/Layers/: ImageLayer.vala  Layer.vala  LayerList.vala  LayerStack.vala  LayerStackItem.vala
src/Core/Tools/: AutoSelectToolItem.vala  DrawPathToolItem.vala  FreeSelectToolItem.vala  MoveToolItem.vala  RectangleSelectToolItem.vala
src/Layers/: ImageLayer.vala  Layer.vala  LayerStack.vala  LayerStackItem.vala
src/Widgets/: CanvasView.vala  HeaderBar.vala  HeaderMenuButton.vala  HighlightOverlay.vala  LayerListBox.vala  LayerRow.vala  MainView.vala  MouseAdjustableLabel.vala  NotebookView.vala  ToolButton.vala  ToolDockWidget.vala  ToolSettingsBar.vala  WorkspaceTab.vala  WorkspaceView.vala
src/Widgets/Docks/: DockContainer.vala  DockHandle.vala  DockWidget.vala  DockWindow.vala  LayerDockWidget.vala  ToolDockWidget.vala
src/Widgets/SettingsWidgets/: TransformSettingsWidget.vala
temp/: NOTES  gegltest  gegltest.c  gegltest.vala
vapi/: cogl-2.0.vapi  cogl-fixes.vapi  gegl-0.4.vapi
